# terX

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  index.html  memory.db  memory.db-shm  memory.db-wal  package-lock.json  package.json  release-workflow-for-private-repo.yml  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yml  ci.yml  release.yml
docs/: faq.md  getting-started.md  installation.md  keyboard-shortcuts.md
ghostty-web/: .gitignore  CLAUDE.md  memory.db  package.json  vite.config.js
ghostty-web/demo/: index.html
ghostty-web/lib/: beamterm-renderer.ts  ghostty.ts  graphics.test.ts  index.ts  input-handler.test.ts  input-handler.ts  interfaces.ts  terminal.test.ts  terminal.ts  types.ts
ghostty-web/lib/addons/: fit.ts
ghostty-web/lib/graphics/: graphics-manager.ts  graphics-renderer.ts  graphics-storage.ts  image-decoder.ts  image-popup.ts  index.ts  kitty-parser.ts  types.ts
ghostty-web/lib/providers/: osc8-link-provider.ts  url-regex-provider.ts
ghostty-web/lib/utils/: open-url.ts
ghostty-web/patches/: ghostty-wasm-api.patch
public/: debug.html  ghostty-vt.wasm
scripts/: build-linux.sh  convert-ghostty-themes.ts
src/: main.ts  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: credentials.rs  hostkeys.rs  lib.rs  sftp.rs  ssh.rs
src/i18n/: en-US.json  index.ts  pl-PL.json
src/lib/: crypto.ts  database.types.ts  debug-logger.ts  file-manager-state.ts  ghostty-themes.ts  local-storage.ts  session-manager.ts  storage.ts  supabase.ts  themes.ts
src/ui/: auth-flow.ts  auth.ts  dialogs.ts  emoji-picker.ts  file-manager.ts  host-dialog.ts  hostkey-dialog.ts  index.ts  key-dialog.ts  master-password.ts  password-dialog.ts  settings.ts  shortcuts-help.ts  sidebar.ts  storage-selector.ts  tabs.ts  tag-dialog.ts
