[package]
name = "terx"
version = "0.1.8"
description = "Cross-platform SSH client with GPU-accelerated rendering"
authors = ["OutrageLabs"]
license = "MIT"
repository = "https://github.com/OutrageLabs/terX"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
log = "0.4.28"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-single-instance = "2.3.6"
portable-pty = "0.9"
tokio = { version = "1", features = ["sync", "io-util", "rt-multi-thread", "macros", "net"] }
parking_lot = "0.12.4"
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0"

# SSH client
russh = "0.56.0"
russh-sftp = "2.1.1"
ssh-key = "0.6.7"
async-trait = "0.1.89"

# Credential management
keyring = "3.6.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
aes-gcm = "0.10.3"
base64 = "0.22.1"
sha2 = "0.10.9"
md-5 = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
hex = "0.4"

# Async utilities
futures = "0.3"

# Error handling & utilities
thiserror = "2.0.17"
rand = "0.8"
uuid = { version = "1.18.1", features = ["v4"] }
hostname = "0.4"
